# EyeTracking

./: CMakeLists.txt  README.md
include/: constants.h  findPupils.h  helpers.h  optEyePose.h
src/: findEyeCenter.cpp  findEyeCorner.cpp  findPupils.cpp  helpers.cpp  main.cpp  optEyePose.cpp
